# lmd-top

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GIE-briefing.md  README.ko.md  README.md  ROADMAP.md  install.sh  lmd-compile---vllm-qwen05b-gb10---rbln-ca22-tp4-s819.yaml
.claude/workflows/: auto-improve.js
.github/workflows/: ci.yml  release.yml
catalog/: models.yaml  zoo.yaml
docs/: QA-TESTPLAN.md  demo.cast
plugins/: lmd-top.yaml
scripts/: fetch-zoo.sh
src/: agent.rs  app.rs  audit.rs  cast.rs  catalog.rs  collect.rs  compat.rs  config.rs  doctor.rs  kube.rs  main.rs  metrics.rs  npu-compat.json  ops.rs  palette.rs  prom.rs  ui.rs
src/app/: action.rs  activity.rs  compile.rs  deploy.rs  filter.rs  library.rs  nav.rs  objective.rs  order.rs  select.rs  setup.rs  sort.rs  state.rs  zoo.rs
src/ui/: deploy.rs  detail.rs  extras.rs  fx.rs  infra.rs  mod.rs  overlays.rs  overview.rs  panel.rs  perf.rs  serving.rs  theme.rs  traffic.rs  widgets.rs
tests/: cli.rs
